--- a/Buoi7/Ex2.html
+++ b/Buoi7/Ex2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tính lũy thừa</title>
-    <script src="script.js" defer></script>
+    <script src="Ex2.js" defer></script>
 </head>
 <body>
     <h2>Kết quả lũy thừa</h2>
