--- a/Ex_buoi8/Ex1.html
+++ b/Ex_buoi8/Ex1.html
@@ -3,6 +3,7 @@
 <head>
   <title>Internal JS</title>
   <script src="Ex1.js"  defer></script>
+  <script src="Ex2.js"  defer></script>
 </head>
 <body>
    <button onclick="sayHello()">Click me</button>
