--- a/Buoi6/Demo.html
+++ b/Buoi6/Demo.html
@@ -25,7 +25,7 @@
                 <img src="gg_play.png" alt="Google Play" class="header__qr--download--img">
             </a>
             <a href="" class="header__qr--link">
-                <img src="app_store.png" alt="App Store" class="header__qr--download--img">
+                <img src="apstore.png" alt="App Store" class="header__qr--download--img">
             </a>
         </div>
     </div>
