--- a/demo-shoppe/Demo.html
+++ b/demo-shoppe/Demo.html
@@ -17,9 +17,8 @@
 <div class="header__navbar hide-on-mobile-tablet">
     <ul class="header__navbar--list">
         <li class="header__navbar--list--item header__navbar--list--item--qr header__navbar--list--item--separate">
-            Vào cửa hàng trên ứng dụng TTH-Shop
+            Vào cửa hàng trên ứng dụng LTH-Shop
     <div class="header__qr">
-        <img src="maqr.png" alt="QR code" class="header__qr--img">
         <div class="header__qr--apps">
             <a href="" class="header__qr--link">
                 <img src="gg_play.png" alt="Google Play" class="header__qr--download--img">
@@ -290,7 +289,7 @@
                     <div class="row sm-gutter">
                         <div class="col l-2-4 m-4 c-6">
                             <a href="#" class="home__product--item">
-                                <div class="home__product--item--img" style="background-image:url(https://img.abaha.vn/photos/resized/320x/83-1618642699-myphamohui-lgvina.png);"></div>
+                                <div class="home__product--item--img" style="background-image: url(https://img.abaha.vn/photos/resized/320x/83-1618642699-myphamohui-lgvina.png);"></div>
                                 <h4 class="home__product--item--name">
                                     Kem lót nâng tông Ohui Makeup Ultimate Brightening Lavender Primer SPF20/PA++
                                 </h4>
@@ -818,13 +817,13 @@
             </div> 
         </div>
         <address class="author">
-            <h5>MAKE BY LE VAN QUANG</h5>
-            <p>Email: lenhatquangldb@gmail.com <br>
-            Phone: 0397888xxx <br>
-            Address: Hoc Vien Cong Nghe Buu Chinh Vien Thong</p>
+            <h5>MAKE BY LE THE HUNG</h5>
+            <p>Email: lthung93qn@gmail.com <br>
+            Phone: 0705828866 <br>
+            Address: Hoc Vien Mo</p>
         </address>
         <div class="footer__bottom">
-            @2021-Bản quyền thuộc về Le Van Quang
+            @2021-Bản quyền thuộc về Le The Hung
         </div>
     </div>
 </div>
